[package]
name = "geojson-area"
version = "0.1.0"
authors = ["ocoupelon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.12.0"
geo-types = "0.4.0"
geojson = { version =  "0.16.0", features=["geo-types"] }
serde_json = "1.0.39"
